V8Debugger: Don't send watcher requests if qml engine has not stopped

This fixes a regression introduced in a8ebf535b829dac. We shouldn't
send watcher evaluation commands while the QML engine hasn't actually
stopped, because this might lead to an assert on the server side.

Task-number: QTCREATORBUG-13916
Change-Id: I300e2f73c0a1a03e0e6187a5357abeba408f72a0
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>