src/plugins/debugger/qml/qmlv8debuggerclient.cpp
@@ -954,6 +954,9 @@ void QmlV8DebuggerClient::executeDebuggerCommand(const QString &command)
 void QmlV8DebuggerClient::synchronizeWatchers(const QStringList &watchers)
 {
     SDEBUG(watchers);
+    if (d->engine->state() != InferiorStopOk)
+        return;
+
     foreach (const QString &exp, watchers) {
         StackHandler *stackHandler = d->engine->stackHandler();
         if (stackHandler->isContentsValid() && stackHandler->currentFrame().isUsable()) {
